minor ui changes

--- a/apps/mobile/lib/l10n/app_en.arb
+++ b/apps/mobile/lib/l10n/app_en.arb
@@ -118,7 +118,7 @@
   "specialInstructions": "Special Instructions",
   "dropLocation": "Drop Location",
   "lockInTheOrder": "Lock In the Order",
-  "joinTheFamily": "Join the Family",
+  "joinTheFamily": "Join the Mobs",
   "language": "Language",
   "english": "English",
   "spanish": "Spanish",
