--- a/apps/mobile/lib/l10n/app_es.arb
+++ b/apps/mobile/lib/l10n/app_es.arb
@@ -293,12 +293,87 @@
   "pizzaAlfredoChicken": "Pollo Alfredo",
   "pizzaAlfredoChickenDesc": "Salsa alfredo cremosa con pollo a la parrilla.",
   "pizzaAlfredoChickenFullDesc": "Déjate llevar por la perfección cremosa con nuestra pizza de Pollo Alfredo. Pechuga de pollo a la parrilla tierna, rica salsa alfredo y queso mozzarella se unen en una corteza dorada. Una pizza blanca tan reconfortante como elegante. Pura satisfacción cremosa en cada bocado.",
+  "combosDeals": "Combos / Ofertas",
+  "combo2SlicesDrink": "2 Rebanadas + Bebida",
+  "combo2SlicesDrinkDesc": "Dos rebanadas de pizza con tu bebida a elección.",
+  "combo2SlicesDrinkFullDesc": "¡Combo de gran valor! Obtén dos rebanadas de pizza de nuestra selección y una bebida refrescante para completar tu comida.",
+  "comboSliceDrink": "Rebanada + Bebida",
+  "comboSliceDrinkDesc": "Una rebanada de pizza con bebida.",
+  "comboSliceDrinkFullDesc": "Perfecto para una comida rápida: una rebanada deliciosa de pizza acompañada de tu bebida favorita.",
+  "comboSliceWingsSoda": "Rebanada + Alitas + Refresco",
+  "comboSliceWingsSodaDesc": "Una rebanada de pizza, alitas y un refresco.",
+  "comboSliceWingsSodaFullDesc": "El combo perfecto para el hambre seria: una rebanada de pizza, alitas crujientes con tu salsa favorita y un refresco frío.",
+  "combo10WingsDrink": "10 Alitas + Bebida",
+  "combo10WingsDrinkDesc": "Diez alitas con tu salsa favorita y una bebida.",
+  "combo10WingsDrinkFullDesc": "¡El sueño de los amantes de las alitas! Diez alitas crujientes bañadas en tu salsa favorita, acompañadas de una bebida refrescante.",
+  "wingsBoneless": "Alitas / Boneless",
+  "wingsBuffalo": "Alitas Buffalo",
+  "wingsBuffaloDesc": "Clásicas alitas buffalo picantes.",
+  "wingsBuffaloFullDesc": "Alitas de pollo crujientes bañadas en nuestra salsa buffalo picante especial. Ácidas, calientes y perfectamente equilibradas: la experiencia definitiva de alitas.",
+  "wingsGarlicParmesan": "Alitas Ajo Parmesano",
+  "wingsGarlicParmesanDesc": "Alitas crujientes con salsa de ajo parmesano.",
+  "wingsGarlicParmesanFullDesc": "Alitas perfectamente crujientes cubiertas con una salsa rica y sabrosa de ajo y parmesano. Mantecosas, con ajo y muy quesudas: una explosión de sabor en cada bocado.",
+  "wingsBBQ": "Alitas BBQ",
+  "wingsBBQDesc": "Alitas BBQ dulces y ahumadas.",
+  "wingsBBQFullDesc": "Alitas tiernas glaseadas con nuestra salsa BBQ casera. Dulces, ahumadas y ligeramente ácidas: ¡para chuparse los dedos!",
+  "wingsMangoHabanero": "Alitas Mango Habanero",
+  "wingsMangoHabaneroDesc": "Alitas picantes con salsa de mango habanero.",
+  "wingsMangoHabaneroFullDesc": "Para quienes aman el picante: alitas crujientes bañadas en una salsa de mango habanero que equilibra perfectamente el dulce tropical con un picor intenso.",
+  "wingsLemonPepper": "Alitas Limón Pimienta",
+  "wingsLemonPepperDesc": "Alitas sazonadas con limón y pimienta.",
+  "wingsLemonPepperFullDesc": "Alitas brillantes y cítricas sazonadas con limón fresco y pimienta negra molida. Ligeras, refrescantes y llenas de sabor.",
+  "wingsHotHoney": "Alitas Miel Picante",
+  "wingsHotHoneyDesc": "Alitas glaseadas con miel picante.",
+  "wingsHotHoneyFullDesc": "La combinación perfecta de dulce y picante: alitas crujientes glaseadas con nuestra salsa de miel picante. Miel dulce que se encuentra con un fuego suave en cada bocado.",
+  "dips": "Salsas",
+  "dipHoneyMustard": "Mostaza con Miel",
+  "dipHoneyMustardDesc": "Salsa de mostaza con miel dulce y ácida.",
+  "dipHoneyMustardFullDesc": "La mezcla perfecta de miel dulce y mostaza ácida que crea una salsa deliciosa para acompañar cualquier plato.",
+  "dipGarlic": "Salsa de Ajo",
+  "dipGarlicDesc": "Salsa cremosa de ajo con hierbas.",
+  "dipGarlicFullDesc": "Salsa cremosa y rica de ajo infusionada con hierbas frescas, perfecta para papas fritas, alitas y más.",
+  "dipParmesan": "Salsa de Parmesano",
+  "dipParmesanDesc": "Salsa cremosa de queso parmesano.",
+  "dipParmesanFullDesc": "Lujosa salsa de queso parmesano con textura suave y cremosa que eleva cualquier guarnición.",
+  "dipItalianDressing": "Aderezo Italiano",
+  "dipItalianDressingDesc": "Clásico aderezo italiano para mojar.",
+  "dipItalianDressingFullDesc": "Aderezo italiano tradicional con hierbas y especias, perfecto como salsa para mojar o como aderezo para ensaladas.",
   "dipRanch": "Ranch",
   "dipRanchDesc": "Salsa ranch cremosa con hierbas.",
   "dipRanchFullDesc": "Salsa ranch cremosa clásica con una mezcla perfecta de hierbas y especias. Fresca, ácida y refrescante: la salsa para mojar definitiva para alitas, papas fritas y más.",
   "dipBlueCheese": "Queso Azul",
   "dipBlueCheeseDesc": "Salsa de queso azul rica y ácida.",
   "dipBlueCheeseFullDesc": "Salsa de queso azul audaz y ácida con trozos de queso azul real. Rica, cremosa y llena de sabor: una elección sofisticada para alitas y verduras.",
+  "fries": "Papas Fritas",
+  "friesGarlic": "Papas Fritas con Ajo",
+  "friesGarlicDesc": "Papas crujientes con ajo y hierbas.",
+  "friesGarlicFullDesc": "Papas fritas doradas y crujientes mezcladas con ajo fresco picado, perejil y un toque de parmesano. Un giro lleno de sabor sobre la guarnición clásica.",
+  "friesPlain": "Papas Fritas Clásicas",
+  "friesPlainDesc": "Clásicas papas fritas doradas y crujientes.",
+  "friesPlainFullDesc": "Papas fritas perfectamente sazonadas, crujientes por fuera y suaves por dentro. La guarnición clásica que nunca falla.",
+  "salads": "Ensaladas",
+  "saladCaesar": "Ensalada César",
+  "saladCaesarDesc": "Clásica ensalada César con lechuga romana.",
+  "saladCaesarFullDesc": "Lechuga romana crujiente mezclada con nuestro aderezo César casero, queso parmesano y crutones crujientes. Un clásico atemporal que nunca pasa de moda.",
+  "saladGreen": "Ensalada Verde",
+  "saladGreenDesc": "Mezcla de hojas verdes frescas con aderezo a elección.",
+  "saladGreenFullDesc": "Una mezcla refrescante de hojas verdes, vegetales frescos y tu aderezo de la casa a elección. Ligera, saludable y deliciosa.",
+  "small": "Pequeña",
+  "large": "Grande",
+  "pasta": "Pasta",
+  "pastaChickenAlfredo": "Pasta Pollo Alfredo",
+  "pastaChickenAlfredoDesc": "Pasta alfredo cremosa con pollo tierno.",
+  "pastaChickenAlfredoFullDesc": "Pasta fettuccine con pechuga de pollo a la parrilla en una salsa alfredo rica y cremosa. Terminada con queso parmesano y perejil fresco para una comida reconfortante e indulgente.",
+  "desserts": "Postres",
+  "dessertChocolateChipCookiePizza": "Pizza de Galleta con Chispas de Chocolate",
+  "dessertChocolateChipCookiePizzaDesc": "Galleta de chispas de chocolate horneada estilo pizza.",
+  "dessertChocolateChipCookiePizzaFullDesc": "Una galleta gigante de chispas de chocolate, tibia y horneada a la perfección y servida al estilo pizza. Pegajosa, chocolatosa e irresistible. Perfecta para compartir o disfrutar en solitario.",
+  "dessertChocolateChurros": "Churros con Chocolate",
+  "dessertChocolateChurrosDesc": "Churros crujientes con salsa de chocolate.",
+  "dessertChocolateChurrosFullDesc": "Churros dorados y crujientes espolvoreados con azúcar y canela, servidos con una rica salsa de chocolate para mojar. Un dulce que satisface cualquier antojo.",
+  "dessertCheesecake": "Cheesecake",
+  "dessertCheesecakeDesc": "Clásico cheesecake cremoso estilo Nueva York.",
+  "dessertCheesecakeFullDesc": "Cheesecake estilo Nueva York, rico y cremoso, con una base de galleta de mantequilla. Suave, decadente y el final perfecto para cualquier comida.",
   "dessertFreshCannoli": "Cannoli Fresco",
   "dessertFreshCannoliDesc": "Cáscara crujiente rellena con crema de ricotta dulce.",
   "dessertFreshCannoliFullDesc": "Cannoli italiano auténtico con una cáscara dorada y crujiente rellena de queso ricotta dulce y cremoso. Cubierto con chips de chocolate y espolvoreado con azúcar en polvo. Un manjar tradicional siciliano que es elegante e indulgente."
