stripe payment addition

--- a/apps/mobile/lib/l10n/app_en.arb
+++ b/apps/mobile/lib/l10n/app_en.arb
@@ -97,6 +97,26 @@
   "orderFailed": "Order Failed",
   "paymentSuccessful": "Payment Successful",
   "paymentFailed": "Payment Failed",
+  "paymentCompletedSuccessfully": "Your payment has been completed successfully.",
+  "paymentCouldNotBeProcessed": "Your payment could not be processed. Please try again.",
+  "payment": "Payment",
+  "orderTotal": "Order Total",
+  "cardHolderName": "Card Holder Name",
+  "cardNumber": "Card Number",
+  "expiryDate": "Expiry Date",
+  "cvc": "CVC",
+  "payNow": "Pay Now",
+  "viewOrders": "View Orders",
+  "backToCheckout": "Back to Checkout",
+  "tryAgain": "Try Again",
+  "enterCardHolderName": "Enter card holder name",
+  "pleaseEnterCardHolderName": "Please enter card holder name",
+  "invalidCardNumber": "Invalid card number",
+  "pleaseEnterCardNumber": "Please enter card number",
+  "pleaseEnterExpiryDate": "Please enter expiry date",
+  "invalidExpiryDate": "Invalid expiry date",
+  "pleaseEnterCvc": "Please enter CVC",
+  "invalidCvc": "Invalid CVC",
   "items": "Items",
   "status": "Status",
   "eta": "ETA",
