--- a/apps/mobile/lib/l10n/app_es.arb
+++ b/apps/mobile/lib/l10n/app_es.arb
@@ -97,6 +97,26 @@
   "orderFailed": "Pedido fallido",
   "paymentSuccessful": "Pago exitoso",
   "paymentFailed": "Pago fallido",
+  "paymentCompletedSuccessfully": "Su pago se ha completado exitosamente.",
+  "paymentCouldNotBeProcessed": "Su pago no pudo ser procesado. Por favor, intente nuevamente.",
+  "payment": "Pago",
+  "orderTotal": "Total del Pedido",
+  "cardHolderName": "Nombre del Titular",
+  "cardNumber": "Número de Tarjeta",
+  "expiryDate": "Fecha de Vencimiento",
+  "cvc": "CVC",
+  "payNow": "Pagar Ahora",
+  "viewOrders": "Ver Pedidos",
+  "backToCheckout": "Volver a Checkout",
+  "tryAgain": "Intentar Nuevamente",
+  "enterCardHolderName": "Ingrese el nombre del titular",
+  "pleaseEnterCardHolderName": "Por favor ingrese el nombre del titular",
+  "invalidCardNumber": "Número de tarjeta inválido",
+  "pleaseEnterCardNumber": "Por favor ingrese el número de tarjeta",
+  "pleaseEnterExpiryDate": "Por favor ingrese la fecha de vencimiento",
+  "invalidExpiryDate": "Fecha de vencimiento inválida",
+  "pleaseEnterCvc": "Por favor ingrese el CVC",
+  "invalidCvc": "CVC inválido",
   "items": "Artículos",
   "status": "Estado",
   "eta": "Llegada",
